chore(releng): update changelog with 8.1.1 changes